--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"@playwright/test": "^1.28.1",
 		"@prisma/client": "^4.11.0",
 		"@supabase/supabase-js": "^2.12.0",
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-vercel": "^2.4.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
